--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     {
-      "source": "/",
+      "source": "https://user.cnid.my.id/(.*)",
       "destination": "/control/gesture.html",
       "permanent": true
     }
