--- a/control/manifest.json
+++ b/control/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Atma Gesture Encoder",
-  "short_name": "AtmaGesture",
+  "short_name": "Photos",
   "start_url": "gesture.html",
   "display": "standalone",
   "background_color": "#000000",
